Improved examples about Lambdas